[package]
name = "shred-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
libc           = "0.2"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes          = "1"
dashmap        = "5"
bincode        = "1"
bs58           = "0.5"
sha2           = "0.10"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
clap           = { version = "4", features = ["derive"] }

# Solana – usamos sólo los crates livianos
solana-sdk     = "1.18"
solana-entry   = "1.18"

[[bin]]
name = "shred-watcher"
path = "src/main.rs"
